Implement sync grades logic